Add Spotify client query map encoder and decoder unit tests